--- a/contact.html
+++ b/contact.html
@@ -1,4 +1,197 @@
 
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <meta charset="utf-8">
+  <meta content="width=device-width, initial-scale=1.0" name="viewport">
+  <title>Contact Us | Awera Visuals - Event Planning, Balloon Decorations, and Luxury Money Bouquets - Serving Dallas Fort Worth (DFW) in Texas.</title>
+
+<!-- Meta Name Description -->
+<meta name="description" content="Awera Visuals provides professional event planning, balloon garlands, balloon columns, balloon arches, customized balloon gifts, luxury money flowers bouquets, luxury rose money flowers, diaper flowers and branded promotional balloon services in Dallas Fort Worth (DFW), Texas. Let us bring your vision to life with expert international creativity!" />
+
+<!-- Meta Keywords -->
+<meta name="keywords" content="awera visuals services, event planning, dallas event planning, fort worth event planning, arlington event planning, burleson event planning, balloon garlands, dallas balloon garlands, fort worth balloon garlands, arlington balloon garlands, burleson balloon garlands, dallas balloon columns, fort worth balloon columns, arlington balloon columns, burleson balloon columns, balloon columns, balloon arches, dallas balloon archs, fort worth balloon archs, arlington balloon archs, burleson balloon archs, customized balloon gifts, luxury money flowers bouquets, event decorations, DFW balloons, Dallas money bouquet, Dallas rose money flowers, Fort Worth balloons, Fort Worth money flowers, Fort Worth rose money flowers, Fort Worth diaper cakes, balloons, balloon columns, balloon arch, balloon customization, balloon gifts, money flowers, rose money flowers, branded promotional balloon products, corporate branding, DFW event services" />
+
+<!-- Meta Author -->
+<meta name="author" content="Awera Visuals" />
+
+<!-- Extra Meta for SEO and Social Sharing -->
+
+<!-- Google Verification (If applicable) -->
+<meta name="google-site-verification" content="3zB3hDHuTv-_Asex4ZgzyrL2PpS4BdZETNcCVbGsEfY" />
+
+<!-- Mobile Optimization -->
+<meta name="viewport" content="width=device-width, initial-scale=1">
+
+<!-- Twitter Meta Tags -->
+<meta name="twitter:title" content="Home | Awera Visuals - Event Planning, Balloon Decorations, and Luxury Money Bouquets - Serving Dallas Fort Worth (DFW) in Texas." />
+<meta name="twitter:site" content="@aweravisuals" />
+<meta name="twitter:creator" content="@aweravisuals" />
+<meta name="twitter:card" content="summary_large_image" />
+<meta name="twitter:description" content="Discover Awera Visuals' wide range of Event Planning, Balloon Decorations, and Luxury Money Bouquets - Serving Dallas Fort Worth (DFW) in Texas." />
+<meta name="twitter:image" content="https://www.aweravisuals.com/assets/img/Aweralogo-White2.png" />
+
+<!-- Open Graph Meta Tags for Facebook and LinkedIn -->
+<meta property="og:title" content="Home | Awera Visuals - Event Planning, Balloon Decorations, and Luxury Money Bouquets - Serving Dallas Fort Worth (DFW) in Texas." />
+<meta property="og:site_name" content="Awera Visuals" />
+<meta property="og:type" content="website" />
+<meta property="og:url" content="https://www.aweravisuals.com/" />
+<meta property="og:description" content="Explore Awera Visuals' Event Planning, Balloon Decorations, and Luxury Money Bouquets - Serving Dallas Fort Worth (DFW) in Texas." />
+<meta property="og:image" content="https://www.aweravisuals.com/assets/img/Aweralogo-White2.png" />
+<meta property="article:publisher" content="https://www.facebook.com/aweravisuals/" />
+
+<!-- Structured Data (Schema.org Business) -->
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Service",
+  "name": "Awera Visuals: Event Planning, Balloon Decorations, and Luxury Money Bouquets - Serving Dallas Fort Worth (DFW) in Texas.",
+  "provider": {
+    "@type": "LocalBusiness",
+    "name": "Awera Visuals",
+    "address": {
+      "@type": "PostalAddress",
+      "streetAddress": "5833 Fairglen Ave, Fossil Creek",
+      "addressLocality": "Fort Worth",
+      "addressRegion": "TX",
+      "postalCode": "76137",
+      "addressCountry": "US"
+    },
+    "telephone": "254-339-3137",
+    "url": "https://www.aweravisuals.com",
+    "sameAs": [
+      "https://www.facebook.com/aweravisuals",
+      "https://www.instagram.com/aweravisuals"
+    ]
+  },
+  "serviceType": [
+    "Event Planning",
+    "Dallas Event Planner",
+    "Fort Worth Event Planner",
+    "DFW Event Planner",
+    "Event Decorations",
+    "DFW Event Decorator",
+    "Event Decorator",
+    "DFW Balloon Decor",
+    "Dallas Balloon Garland",
+    "Fort Worth Balloon Garland",
+    "DFW Balloon Garland",
+    "Balloon Decor",
+    "DFW Balloon Decorations",
+    "Balloon Decorations",
+    "Balloon Decorator",
+    "DFW Balloon Stylist",
+    "DFW Balloon Artist",
+    "Party Decorations",
+    "DFW Party Decorator",
+    "Dallas Luxury Money Flowers",
+    "Dallas Luxury Money Bouquet",
+    "Dallas Luxury Money Bouquets",
+    "Dallas Luxury Rose Money Flowers",
+    "Dallas Luxury Rose Money Bouquet",
+    "Dallas Luxury Rose Money Bouquets",
+    "Fort Worth Money Flowers",
+    "Fort Worth Money Bouquet",
+    "Fort Worth Money Bouquets",
+    "Fort Worth Luxury Money Flowers",
+    "Fort Worth Luxury Money Bouquet",
+    "Fort Worth Luxury Money Bouquets",
+    "Fort Worth Luxury Rose Money Flowers",
+    "Fort Worth Luxury Rose Money Bouquet",
+    "Fort Worth Luxury Rose Money Bouquets",
+    "Money Flowers",
+    "Money Bouquet",
+    "Money Bouquets",
+    "Luxury Money Flowers",
+    "Luxury Money Bouquet",
+    "Luxury Money Bouquets",
+    "Luxury Rose Money Flowers",
+    "Luxury Rose Money Bouquet",
+    "Luxury Rose Money Bouquets",
+    "Money Flowers",
+    "Money Bouquet",
+    "Money Bouquets",
+    "Rose Money Flowers",
+    "Rose Money Bouquet",
+    "Rose Money Bouquets",
+    "Branded Promotional Products",
+    "Branded Balloons",
+    "Business Balloon Branding",
+    "Corporate Balloon Branding"
+  ],
+  "areaServed": {
+    "@type": "Place",
+    "name": "Dallas Fort Worth (DFW), Texas"
+  }
+}
+</script>
+
+<!-- Canonical URL -->
+<link rel="canonical" href="https://www.aweravisuals.com/contact" />
+
+<!-- Language and Alternate Links -->
+<link rel="alternate" hreflang="x-default" href="https://www.aweravisuals.com/contact" />
+<link rel="alternate" hreflang="en-us" href="https://www.aweravisuals.com/contact" />
+
+
+  <!-- Extra Meta for SEO and Social Sharing: Stop-->
+
+
+
+
+  
+
+  <!-- Favicons -->
+  <link href="assets/img/Aweralogo-White.png" rel="icon">
+  <link href="assets/img/Aweralogo-White.png" rel="apple-touch-icon">
+
+  <!-- Fonts -->
+  <link href="https://fonts.googleapis.com" rel="preconnect">
+  <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+
+  <!-- Vendor CSS Files -->
+  <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+  <link href="assets/vendor/aos/aos.css" rel="stylesheet">
+  <link href="assets/vendor/fontawesome-free/css/all.min.css" rel="stylesheet">
+  <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
+
+  <!-- Main CSS File -->
+  <link href="assets/css/main.css" rel="stylesheet">
+
+  <!-- =======================================================
+  * Template Name: EstateAgency
+  * Template URL: https://bootstrapmade.com/real-estate-agency-bootstrap-template/
+  * License: https://bootstrapmade.com/license/
+  ======================================================== -->
+</head>
+
+<body class="about-page">
+
+  <header id="header" class="header d-flex align-items-center fixed-top">
+    <div class="container-fluid container-xl position-relative d-flex align-items-center justify-content-between">
+
+      <a href="index.html" class="logo d-flex align-items-center">
+        <!-- Uncomment the line below if you also wish to use an image logo -->
+        <img src="assets/img/Aweralogo-White.png" alt="index.html">        
+        <h1 class="sitename">Awera Visuals</h1>
+      </a>
+
+      <nav id="navmenu" class="navmenu">
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="services.html">Services</a></li>
+          <li><a href="portfolio.html">Portfolio</a></li>
+          <li><a href="contact.html" class="active">Contact</a></li>
+        </ul>
+        <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
+      </nav>
+
+    </div>
+  </header>
 
   <main class="main">
 
@@ -31,10 +224,9 @@
       <div class="container" data-aos="fade-up" data-aos-delay="100">
 
       <div class="credits">
-        <p>Wow your guests or surprise someone with beautiful balloons or luxury bouquets. Let us turn your ideas into unforgettable moments with our <b>professional event planning, eye-catching balloon decorations, and stunning luxury money bouquets.</b></p>
-        <p>We’re excited to help you create unforgettable memories that elevate both your events and your gifting experience.</p>
-        <p>Ready to make it happen? Click on our order form: <a href="https://forms.gle/XcXYMa2fynW38vpv6" width="1000" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">here.</a>
-        TO DELETE <<p>Ready to make it happen? Click on our order form: <a href="https://forms.office.com/r/2e6B1suZZU" width="1000" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">here.</a>
+        <p>Wow your guests or surprise someone with beautiful balloons or luxury bouquets. Let us turn your ideas into unforgettable moments with our <b>professional event planning, eye-catching yet affordable balloon decorations, and stunning luxury money bouquets.</b></p>
+        <p>We’re excited to help you create unforgettable visuals that elevate both your events and your gifting experience.</p>
+        <p>Ready to make it happen? Click on our order form: <a href="https://forms.office.com/r/2e6B1suZZU" width="1000" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">here.</a>
       </div> 
         <br>
 
@@ -121,9 +313,9 @@
      <!-- I added-->
       <a href="index.html" class="logo d-flex align-items-center">
         <!-- Uncomment the line below if you also wish to use an image logo -->
-        <img src="assets/img/Awera Surprises Logo.png" alt="index.html">
-        <!--<h1 class="sitename">Awera<span> Surprises</span></h1> -->
-        <h1 class="sitename">Awera Surprises</h1>
+        <img src="assets/img/Aweralogo-White.png" alt="index.html">
+        <!--<h1 class="sitename">Awera<span> Visuals</span></h1> -->
+        <h1 class="sitename">Awera Visuals</h1>
       </a>
              <!-- I added-->
           
@@ -136,10 +328,8 @@
             <h4>Contact</h4>
             <p>
              <strong>Phone:</strong> <a href="tel: +1 254 339 3137"> +1 254 339 3137</a></br>
-               <strong>Order Form:</strong> <a href="https://forms.gle/XcXYMa2fynW38vpv6"> Book Now </a></br>
-                <!-- <strong>Email:</strong> <a href="mailto:awerasurprises@gmail.com?subject=Book%20Awera%20Surprises" class=""> <span>awerasurprises@gmail.com</span></a> <br> -->
-                 <strong>Instagram:</strong> <a href="https://www.instagram.com/awerasurprises"> awerasurprises </a></br>
-                  <strong>TikTok:</strong> <a href="https://www.tiktok.com/@awerasurprises"> awerasurprises </a></br>
+              <strong>Email:</strong> <a href="mailto:sales@aweravisuals.com?subject=Book%20Awera%20Visuals" class=""> <span>sales@aweravisuals.com</span></a> <br>
+                 <strong>Instagram:</strong> <a href="https://www.instagram.com/aweravisuals"> aweravisuals </a></br>
                     <strong>Location:</strong> <a href="https://support.crunchbase.com/hc/en-us/articles/360010016393-What-cities-are-in-the-Dallas-Fort-Worth-region"> Servicing all Dallas Fort Worth, TX Metroplex Cities</a></br>
              </p>
           </div>
@@ -159,10 +349,10 @@
         <!--      <div class="col-lg-3 col-md-6"> Block -->  
        <!-- Block  <h4>Follow Us</h4>  Block -->  
         <!-- Block         <div class="social-links d-flex"> Block -->  
-           <!-- Block     <a href="https://www.linkedin.com/company/awerasurprises" class="linkedin"><i class="bi bi-linkedin"></i></a>   Block -->  
-            <!--       <a href="https://www.tiktok.com/@awerasurprises" class="tiktok"><i class="bi bi-tiktok"></i></a>   Block -->  
-            <!--      <a href="https://www.instagram.com/awerasurprises" class="instagram"><i class="bi bi-instagram"></i></a>    Block -->  
-            <!--       <a href="https://www.awerasurprises.com" class="facebook"><i class="bi bi-facebook"></i></a>    Block -->  
+           <!-- Block     <a href="https://www.linkedin.com/company/aweravisuals" class="linkedin"><i class="bi bi-linkedin"></i></a>   Block -->  
+            <!--       <a href="https://www.tiktok.com/@aweravisuals_" class="tiktok"><i class="bi bi-tiktok"></i></a>   Block -->  
+            <!--      <a href="https://www.instagram.com/aweravisuals" class="instagram"><i class="bi bi-instagram"></i></a>    Block -->  
+            <!--       <a href="https://www.aweravisuals.com" class="facebook"><i class="bi bi-facebook"></i></a>    Block -->  
            <!--     </div>  Block -->  
         </div>
 
@@ -172,14 +362,14 @@
     <div class="container copyright text-center mt-4">
       <p>© <script type="text/javascript">var year = new Date();document.write(year.getFullYear());</script></p>
       <div class="credits">
-        Designed for <a href="https://www.awerasurprises.com">Awera Surprises</a>
+        Designed for <a href="https://www.aweravisuals.com">Awera Visuals</a>
       </div>
     </div>
 
   </footer>
 
   <!-- Scroll Top -->
-  <a href="https://www.awerasurprises.com/home" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
+  <a href="https://www.aweravisuals.com/home" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
 
   <!-- Preloader -->
   <div id="preloader"></div>
