--- a/contact.html
+++ b/contact.html
@@ -5,16 +5,16 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Contact Us | Awera Visuals - Event Planning, Balloon Decorations, and Luxury Money Bouquets - Serving Dallas Fort Worth (DFW) in Texas.</title>
+  <title>Contact Us | Awera Suprises - Event Planning, Balloon Decorations, and Luxury Money Bouquets - Serving Dallas Fort Worth (DFW) in Texas.</title>
 
 <!-- Meta Name Description -->
-<meta name="description" content="Awera Visuals provides professional event planning, balloon garlands, balloon columns, balloon arches, customized balloon gifts, luxury money flowers bouquets, luxury rose money flowers, diaper flowers and branded promotional balloon services in Dallas Fort Worth (DFW), Texas. Let us bring your vision to life with expert international creativity!" />
+<meta name="description" content="Awera Suprises provides professional event planning, balloon garlands, balloon columns, balloon arches, customized balloon gifts, luxury money flowers bouquets, luxury rose money flowers, diaper flowers and branded promotional balloon services in Dallas Fort Worth (DFW), Texas. Let us bring your vision to life with expert international creativity!" />
 
 <!-- Meta Keywords -->
-<meta name="keywords" content="awera visuals services, event planning, dallas event planning, fort worth event planning, arlington event planning, burleson event planning, balloon garlands, dallas balloon garlands, fort worth balloon garlands, arlington balloon garlands, burleson balloon garlands, dallas balloon columns, fort worth balloon columns, arlington balloon columns, burleson balloon columns, balloon columns, balloon arches, dallas balloon archs, fort worth balloon archs, arlington balloon archs, burleson balloon archs, customized balloon gifts, luxury money flowers bouquets, event decorations, DFW balloons, Dallas money bouquet, Dallas rose money flowers, Fort Worth balloons, Fort Worth money flowers, Fort Worth rose money flowers, Fort Worth diaper cakes, balloons, balloon columns, balloon arch, balloon customization, balloon gifts, money flowers, rose money flowers, branded promotional balloon products, corporate branding, DFW event services" />
+<meta name="keywords" content="awera suprises services, event planning, dallas event planning, fort worth event planning, arlington event planning, burleson event planning, balloon garlands, dallas balloon garlands, fort worth balloon garlands, arlington balloon garlands, burleson balloon garlands, dallas balloon columns, fort worth balloon columns, arlington balloon columns, burleson balloon columns, balloon columns, balloon arches, dallas balloon archs, fort worth balloon archs, arlington balloon archs, burleson balloon archs, customized balloon gifts, luxury money flowers bouquets, event decorations, DFW balloons, Dallas money bouquet, Dallas rose money flowers, Fort Worth balloons, Fort Worth money flowers, Fort Worth rose money flowers, Fort Worth diaper cakes, balloons, balloon columns, balloon arch, balloon customization, balloon gifts, money flowers, rose money flowers, branded promotional balloon products, corporate branding, DFW event services" />
 
 <!-- Meta Author -->
-<meta name="author" content="Awera Visuals" />
+<meta name="author" content="Awera Suprises" />
 
 <!-- Extra Meta for SEO and Social Sharing -->
 
@@ -25,19 +25,19 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
 <!-- Twitter Meta Tags -->
-<meta name="twitter:title" content="Home | Awera Visuals - Event Planning, Balloon Decorations, and Luxury Money Bouquets - Serving Dallas Fort Worth (DFW) in Texas." />
-<meta name="twitter:site" content="@aweravisuals" />
-<meta name="twitter:creator" content="@aweravisuals" />
+<meta name="twitter:title" content="Home | Awera Surprises - Event Planning, Balloon Decorations, and Luxury Money Bouquets - Serving Dallas Fort Worth (DFW) in Texas." />
+<meta name="twitter:site" content="@awerasurprises" />
+<meta name="twitter:creator" content="@aweravsurprises" />
 <meta name="twitter:card" content="summary_large_image" />
-<meta name="twitter:description" content="Discover Awera Visuals' wide range of Event Planning, Balloon Decorations, and Luxury Money Bouquets - Serving Dallas Fort Worth (DFW) in Texas." />
-<meta name="twitter:image" content="https://www.aweravisuals.com/assets/img/Aweralogo-White2.png" />
+<meta name="twitter:description" content="Discover Awera Suprises' wide range of Event Planning, Balloon Decorations, and Luxury Money Bouquets - Serving Dallas Fort Worth (DFW) in Texas." />
+<meta name="twitter:image" content="https://www.awerasurprises.com/assets/img/Awera Surprises Logo.png" />
 
 <!-- Open Graph Meta Tags for Facebook and LinkedIn -->
-<meta property="og:title" content="Home | Awera Visuals - Event Planning, Balloon Decorations, and Luxury Money Bouquets - Serving Dallas Fort Worth (DFW) in Texas." />
-<meta property="og:site_name" content="Awera Visuals" />
+<meta property="og:title" content="Home | Awera Surprises - Event Planning, Balloon Decorations, and Luxury Money Bouquets - Serving Dallas Fort Worth (DFW) in Texas." />
+<meta property="og:site_name" content="Awera Surprises" />
 <meta property="og:type" content="website" />
-<meta property="og:url" content="https://www.aweravisuals.com/" />
-<meta property="og:description" content="Explore Awera Visuals' Event Planning, Balloon Decorations, and Luxury Money Bouquets - Serving Dallas Fort Worth (DFW) in Texas." />
+<meta property="og:url" content="https://www.awerasurprises.com/" />
+<meta property="og:description" content="Explore Awera Surprises' Event Planning, Balloon Decorations, and Luxury Money Bouquets - Serving Dallas Fort Worth (DFW) in Texas." />
 <meta property="og:image" content="https://www.aweravisuals.com/assets/img/Aweralogo-White2.png" />
 <meta property="article:publisher" content="https://www.facebook.com/aweravisuals/" />
 
