--- a/contact.html
+++ b/contact.html
@@ -2,19 +2,22 @@
 <!DOCTYPE html>
 <html lang="en">
 
+<!DOCTYPE html>
+<html lang="en">
+
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Contact Us | Awera Suprises - Event Planning, Balloon Decorations, and Luxury Money Bouquets - Serving Dallas Fort Worth (DFW) in Texas.</title>
+  <title>Portfolio | Awera Surprises - Event Planning, Balloon Decorations, and Luxury Money Bouquets - Serving Dallas Fort Worth (DFW) in Texas.</title>
 
 <!-- Meta Name Description -->
-<meta name="description" content="Awera Suprises provides professional event planning, balloon garlands, balloon columns, balloon arches, customized balloon gifts, luxury money flowers bouquets, luxury rose money flowers, diaper flowers and branded promotional balloon services in Dallas Fort Worth (DFW), Texas. Let us bring your vision to life with expert international creativity!" />
+<meta name="description" content="Awera Surprises provides professional event planning, balloon garlands, balloon columns, balloon arches, customized balloon gifts, luxury money flowers bouquets, luxury rose money flowers, diaper flowers and branded promotional balloon services in Dallas Fort Worth (DFW), Texas. Let us bring your vision to life with expert international creativity!" />
 
 <!-- Meta Keywords -->
-<meta name="keywords" content="awera suprises services, event planning, dallas event planning, fort worth event planning, arlington event planning, burleson event planning, balloon garlands, dallas balloon garlands, fort worth balloon garlands, arlington balloon garlands, burleson balloon garlands, dallas balloon columns, fort worth balloon columns, arlington balloon columns, burleson balloon columns, balloon columns, balloon arches, dallas balloon archs, fort worth balloon archs, arlington balloon archs, burleson balloon archs, customized balloon gifts, luxury money flowers bouquets, event decorations, DFW balloons, Dallas money bouquet, Dallas rose money flowers, Fort Worth balloons, Fort Worth money flowers, Fort Worth rose money flowers, Fort Worth diaper cakes, balloons, balloon columns, balloon arch, balloon customization, balloon gifts, money flowers, rose money flowers, branded promotional balloon products, corporate branding, DFW event services" />
+<meta name="keywords" content="awera surprises services, event planning, dallas event planning, fort worth event planning, arlington event planning, burleson event planning, balloon garlands, dallas balloon garlands, fort worth balloon garlands, arlington balloon garlands, burleson balloon garlands, dallas balloon columns, fort worth balloon columns, arlington balloon columns, burleson balloon columns, balloon columns, balloon arches, dallas balloon archs, fort worth balloon archs, arlington balloon archs, burleson balloon archs, customized balloon gifts, luxury money flowers bouquets, event decorations, DFW balloons, Dallas money bouquet, Dallas rose money flowers, Fort Worth balloons, Fort Worth money flowers, Fort Worth rose money flowers, Fort Worth diaper cakes, balloons, balloon columns, balloon arch, balloon customization, balloon gifts, money flowers, rose money flowers, branded promotional balloon products, corporate branding, DFW event services" />
 
 <!-- Meta Author -->
-<meta name="author" content="Awera Suprises" />
+<meta name="author" content="Awera Surprises" />
 
 <!-- Extra Meta for SEO and Social Sharing -->
 
@@ -27,9 +30,9 @@
 <!-- Twitter Meta Tags -->
 <meta name="twitter:title" content="Home | Awera Surprises - Event Planning, Balloon Decorations, and Luxury Money Bouquets - Serving Dallas Fort Worth (DFW) in Texas." />
 <meta name="twitter:site" content="@awerasurprises" />
-<meta name="twitter:creator" content="@aweravsurprises" />
+<meta name="twitter:creator" content="@<meta name="twitter:site" content="@awerasurprises" />
 <meta name="twitter:card" content="summary_large_image" />
-<meta name="twitter:description" content="Discover Awera Suprises' wide range of Event Planning, Balloon Decorations, and Luxury Money Bouquets - Serving Dallas Fort Worth (DFW) in Texas." />
+<meta name="twitter:description" content="Discover Awera Surprises' wide range of Event Planning, Balloon Decorations, and Luxury Money Bouquets - Serving Dallas Fort Worth (DFW) in Texas." />
 <meta name="twitter:image" content="https://www.awerasurprises.com/assets/img/Awera Surprises Logo.png" />
 
 <!-- Open Graph Meta Tags for Facebook and LinkedIn -->
@@ -37,19 +40,19 @@
 <meta property="og:site_name" content="Awera Surprises" />
 <meta property="og:type" content="website" />
 <meta property="og:url" content="https://www.awerasurprises.com/" />
-<meta property="og:description" content="Explore Awera Surprises' Event Planning, Balloon Decorations, and Luxury Money Bouquets - Serving Dallas Fort Worth (DFW) in Texas." />
-<meta property="og:image" content="https://www.aweravisuals.com/assets/img/Aweralogo-White2.png" />
-<meta property="article:publisher" content="https://www.facebook.com/aweravisuals/" />
+<meta property="og:description" content="Explore Awera Surprises' 123 Event Planning, Balloon Decorations, and Luxury Money Bouquets - Serving Dallas Fort Worth (DFW) in Texas." />
+<meta property="og:image" content="https://www.awerasurprises.com/assets/img/Awera Surprises Logo.png" />
+<meta property="article:publisher" content="https://www.facebook.com/awerasurprises/" />
 
 <!-- Structured Data (Schema.org Business) -->
 <script type="application/ld+json">
 {
   "@context": "https://schema.org",
   "@type": "Service",
-  "name": "Awera Visuals: Event Planning, Balloon Decorations, and Luxury Money Bouquets - Serving Dallas Fort Worth (DFW) in Texas.",
+  "name": "Awera Surprises: Event Planning, Balloon Decorations, and Luxury Money Bouquets - Serving Dallas Fort Worth (DFW) in Texas.",
   "provider": {
     "@type": "LocalBusiness",
-    "name": "Awera Visuals",
+    "name": "Awera Surprises",
     "address": {
       "@type": "PostalAddress",
       "streetAddress": "5833 Fairglen Ave, Fossil Creek",
@@ -59,10 +62,10 @@
       "addressCountry": "US"
     },
     "telephone": "254-339-3137",
-    "url": "https://www.aweravisuals.com",
+    "url": "https://www.awerasurprises.com",
     "sameAs": [
-      "https://www.facebook.com/aweravisuals",
-      "https://www.instagram.com/aweravisuals"
+      "https://www.facebook.com/awerasurprises",
+      "https://www.instagram.com/awerasurprises"
     ]
   },
   "serviceType": [
@@ -128,11 +131,11 @@
 </script>
 
 <!-- Canonical URL -->
-<link rel="canonical" href="https://www.aweravisuals.com/contact" />
+<link rel="canonical" href="https://www.awerasurprises.com" />
 
 <!-- Language and Alternate Links -->
-<link rel="alternate" hreflang="x-default" href="https://www.aweravisuals.com/contact" />
-<link rel="alternate" hreflang="en-us" href="https://www.aweravisuals.com/contact" />
+<link rel="alternate" hreflang="x-default" href="https://www.awerasurprises.com" />
+<link rel="alternate" hreflang="en-us" href="https://www.awerasurprises.com" />
 
 
   <!-- Extra Meta for SEO and Social Sharing: Stop-->
@@ -143,8 +146,8 @@
   
 
   <!-- Favicons -->
-  <link href="assets/img/Aweralogo-White.png" rel="icon">
-  <link href="assets/img/Aweralogo-White.png" rel="apple-touch-icon">
+  <link href="assets/img/Awera Surprises Logo.png" rel="icon">
+  <link href="assets/img/Awera Surprises Logo.png" rel="apple-touch-icon">
 
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com" rel="preconnect">
@@ -167,6 +170,33 @@
   * License: https://bootstrapmade.com/license/
   ======================================================== -->
 </head>
+
+<body class="properties-page">
+
+  <header id="header" class="header d-flex align-items-center fixed-top">
+    <div class="container-fluid container-xl position-relative d-flex align-items-center justify-content-between">
+
+      <a href="index.html" class="logo d-flex align-items-center">
+        <!-- Uncomment the line below if you also wish to use an image logo -->
+        <img src="assets/img/Aweralogo-White.png" alt="index.html">        
+        <!--<h1 class="sitename">Awera<span> Surprises</span></h1> -->
+        <h1 class="sitename">Awera Surprises</h1>
+      </a>
+
+      <nav id="navmenu" class="navmenu">
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="services.html">Services</a></li>
+          <li><a href="portfolio.html" class="active">Portfolio</a></li>
+          <li><a href="contact.html">Contact</a></li>
+        </ul>
+        <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
+      </nav>
+
+    </div>
+  </header>
+
 
 <body class="about-page">
 
