--- a/about.html
+++ b/about.html
@@ -367,6 +367,74 @@
      <!-- I added-->
       <a href="index.html" class="logo d-flex align-items-center">
         <!-- Uncomment the line below if you also wish to use an image logo -->
+        <img src="assets/img/Awera Surprises Logo.png" alt="index.html">
+        <!--<h1 class="sitename">Awera<span> Surprises</span></h1> -->
+        <h1 class="sitename">Awera Surprises</h1>
+      </a>
+             <!-- I added-->
+          
+
+        </div>
+
+        <div class="col-lg-3 col-md-6 d-flex">
+          <i class="bi bi-telephone icon"></i>      <!-- INSTAGRAM ICON   <i class="bi bi-instagram"></i></a> --->
+          <div>
+            <h4>Contact</h4>
+            <p>
+             <strong>Phone:</strong> <a href="tel: +1 254 339 3137"> +1 254 339 3137</a></br>
+               <strong>Order Form:</strong> <a href="https://forms.gle/XcXYMa2fynW38vpv6"> Book Now </a></br>
+                <!-- <strong>Email:</strong> <a href="mailto:awerasurprises@gmail.com?subject=Book%20Awera%20Surprises" class=""> <span>awerasurprises@gmail.com</span></a> <br> -->
+                 <strong>Instagram:</strong> <a href="https://www.instagram.com/awerasurprises"> awerasurprises </a></br>
+                  <strong>TikTok:</strong> <a href="https://www.tiktok.com/@awerasurprises"> awerasurprises </a></br>
+                    <strong>Location:</strong> <a href="https://support.crunchbase.com/hc/en-us/articles/360010016393-What-cities-are-in-the-Dallas-Fort-Worth-region"> Servicing all Dallas Fort Worth, TX Metroplex Cities</a></br>
+             </p>
+          </div>
+        </div>
+
+        <div class="col-lg-3 col-md-6 d-flex">
+          <i class="bi bi-clock icon"></i>
+          <div>
+            <h4>Opening Hours</h4>
+            <p>
+              <strong>Monday - Saturday:</strong> <span>10AM - 8PM</span><br>
+              <strong>Sunday</strong>: <span>Closed</span>
+            </p>
+          </div>
+        </div>
+
+        <!--      <div class="col-lg-3 col-md-6"> Block -->  
+       <!-- Block  <h4>Follow Us</h4>  Block -->  
+        <!-- Block         <div class="social-links d-flex"> Block -->  
+           <!-- Block     <a href="https://www.linkedin.com/company/awerasurprises" class="linkedin"><i class="bi bi-linkedin"></i></a>   Block -->  
+            <!--       <a href="https://www.tiktok.com/@awerasurprises" class="tiktok"><i class="bi bi-tiktok"></i></a>   Block -->  
+            <!--      <a href="https://www.instagram.com/awerasurprises" class="instagram"><i class="bi bi-instagram"></i></a>    Block -->  
+            <!--       <a href="https://www.awerasurprises.com" class="facebook"><i class="bi bi-facebook"></i></a>    Block -->  
+           <!--     </div>  Block -->  
+        </div>
+
+      </div>
+    </div>
+
+    <div class="container copyright text-center mt-4">
+      <p>© <script type="text/javascript">var year = new Date();document.write(year.getFullYear());</script></p>
+      <div class="credits">
+        Designed for <a href="https://www.awerasurprises.com">Awera Surprises</a>
+      </div>
+    </div>
+
+  </footer>
+  
+  
+  <footer id="footer" class="footer light-background">
+
+    <div class="container">
+      <div class="row gy-3">
+        <div class="col-lg-3 col-md-6 d-flex">
+
+          
+     <!-- I added-->
+      <a href="index.html" class="logo d-flex align-items-center">
+        <!-- Uncomment the line below if you also wish to use an image logo -->
         <img src="assets/img/Aweralogo-White.png" alt="index.html">
         <!--<h1 class="sitename">Awera<span> Visuals</span></h1> -->
         <h1 class="sitename">Awera Visuals</h1>
