--- a/about.html
+++ b/about.html
@@ -230,7 +230,7 @@
             <!-- Paragraph 1: Start of Italics --> 
             <br>
             <p class="fst-italic">
-              <span class="u-text-grey-90">Simply put, We create great surprises and event memories!</span></b>
+              <span class="u-text-grey-90">Simply put, We create great surprises and memories!</span></b>
             </p>
             <!-- End of Italics-- --> 
 
