--- a/about.html
+++ b/about.html
@@ -143,8 +143,8 @@
   
 
   <!-- Favicons -->
-  <link href="assets/img/Aweralogo-White.png" rel="icon">
-  <link href="assets/img/Aweralogo-White.png" rel="apple-touch-icon">
+  <link href="assets/img/Awera Surprises Logo.png" rel="icon">
+  <link href="assets/img/Awera Surprises Logo.png" rel="apple-touch-icon">
   
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com" rel="preconnect">
