--- a/about.html
+++ b/about.html
@@ -175,9 +175,9 @@
 
       <a href="index.html" class="logo d-flex align-items-center">
         <!-- Uncomment the line below if you also wish to use an image logo -->
-        <img src="assets/img/Aweralogo-White.png" alt="index.html">
-        <!--<h1 class="sitename">Awera<span> Visuals</span></h1> -->
-        <h1 class="sitename">Awera Visuals</h1>
+        <img src="assets/img/Awera Surprises Logo.png" alt="index.html">
+        <!--<h1 class="sitename">Awera<span> Surprises</span></h1> -->
+        <h1 class="sitename">Awera Surprises</h1>
       </a>
 
       <nav id="navmenu" class="navmenu">
