--- a/services.html
+++ b/services.html
@@ -175,7 +175,7 @@
 
       <a href="index.html" class="logo d-flex align-items-center">
         <!-- Uncomment the line below if you also wish to use an image logo -->
-        <img src="assets/img/Aweralogo-White.png" alt="index.html">
+        <img src="assets/img/Awera Surprises Logo.png" alt="index.html">
         <!--<h1 class="sitename">Awera<span> Surprises</span></h1> -->
         <h1 class="sitename">Awera Surprises</h1>
       </a>
