--- a/portfolio.html
+++ b/portfolio.html
@@ -234,7 +234,7 @@
         <div class="row gy-4">
 
 
-          <p>Get inspired by our curated portfolio showcasing the creativity and elegance behind every design. Scroll down to explore our <b>eye-catching event decorations</b> and <b>beautifully crafted luxury money bouquets</b>, each made to leave a lasting great impression.</p>
+          <p>Get inspired by our curated portfolio showcasing the creativity and elegance behind every design. Scroll down to explore our <b>eye-catching elegant balloon decorations</b> and <b>beautifully crafted luxury money bouquets</b>, each made to leave a lasting great impression.</p>
 
           <p>1) <b></b><a href="portfolio.html#elegantballoons">Eye-catching Elegant Balloons</a></p>
           <p>2) <b></b><a href="portfolio.html#moneybouquet">Luxury Money Bouquets</a></p>
