--- a/services.html
+++ b/services.html
@@ -227,7 +227,7 @@
       <div class="container" data-aos="fade-up" data-aos-delay="100">
 
       <div class="credits">
-        <p>At <b>Awera Surprises</b>, we are dedicated to transforming your ideas into beautiful visual reality. From <b>thorough event planning to beautiful event decorations to luxury money bouquets</b>, we bring your vision to life with creativity and precision.</p>
+        <p>At <b>Awera Surprises</b>, we are dedicated to transforming your ideas into beautiful visual reality. From <b>thorough event planning to beautiful balloon decorations to luxury money bouquets</b>, we bring your vision to life with creativity and precision.</p>
         <p><a href="contact.html" class="btn-get-started">Contact us</a> today to bring your event vision to life.</p>
      </br>
         <p>Explore our full range of services and pricing below.     
