--- a/services.html
+++ b/services.html
@@ -206,7 +206,7 @@
           <div class="row d-flex justify-content-center text-center">
             <div class="col-lg-8">
               <h1>Services</h1>
-              <p class="mb-0">Luxury planning, décor, and bouquets that elevate events and leave great lasting impression on you and your guests.</p>
+              <p class="mb-0">Elegant balloons and luxury money bouquets that leave great surprises and lasting impressions on your loved ones.</p>
             </div>
           </div>
         </div>
