--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
         <!-- <div class="carousel-item active">-->
  
 <div style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%; background: #000; width: 100%;">
-<!-- <iframe 
+<!-- FOR YOUTUBE VIDEOS  <iframe 
     src=""https://www.youtube.com/embed/LPZh9BOjkQs?si=oNr0RrvDhkQ6U31U" 
     style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;" 
     frameborder="0" 
@@ -212,7 +212,6 @@
     allowfullscreen>     
 </iframe> --> 
 
-  <!-- TEST THIS LOGO AND ITS WORKED BY ITSELF <img src="assets/img/Aweralogo-White.png" alt="index.html"> -->
     <img src="assets/img/GoldBanner.png" alt="index.html">   
   </iframe>
 </div>
