--- a/portfolio.html
+++ b/portfolio.html
@@ -266,7 +266,7 @@
 
           <div class="col-xl-4 col-md-6" data-aos="fade-up" data-aos-delay="100">
             <div class="card">
-              <img src="assets/img/BlueBalloon.png" alt="" class="img-fluid">
+              <img src="assets/img/BlueBalloon2.png" alt="" class="img-fluid">
               <div class="card-body">
                 <h3><a href="contact.html" class="stretched-link"></a></h3>
                 <div class="card-content d-flex flex-column justify-content-center text-center">
