--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
 <!-- Twitter Meta Tags -->
-<meta name="twitter:title" content="Home | Awera Surprises - Event Planning, Balloon Decorations, and Luxury Money Bouquets - Serving Dallas Fort Worth (DFW) in Texas." />
+<meta name="twitter:title" content="About Us | Awera Surprises - Event Planning, Balloon Decorations, and Luxury Money Bouquets - Serving Dallas Fort Worth (DFW) in Texas." />
 <meta name="twitter:site" content="@awerasurprises" />
 <meta name="twitter:creator" content="@awerasurprises" />
 <meta name="twitter:card" content="summary_large_image" />
@@ -33,7 +33,7 @@
 <meta name="twitter:image" content="https://www.awerasurprises.com/assets/img/Aweralogo-White2.png" />
 
 <!-- Open Graph Meta Tags for Facebook and LinkedIn -->
-<meta property="og:title" content="Home | Awera Surprises - Event Planning, Balloon Decorations, and Luxury Money Bouquets - Serving Dallas Fort Worth (DFW) in Texas." />
+<meta property="og:title" content="About Us | Awera Surprises - Event Planning, Balloon Decorations, and Luxury Money Bouquets - Serving Dallas Fort Worth (DFW) in Texas." />
 <meta property="og:site_name" content="Awera Surprises" />
 <meta property="og:type" content="website" />
 <meta property="og:url" content="https://www.awerasurprises.com/" />
