--- a/contact.html
+++ b/contact.html
@@ -28,7 +28,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
 <!-- Twitter Meta Tags -->
-<meta name="twitter:title" content="Home | Awera Surprises - Event Planning, Balloon Decorations, and Luxury Money Bouquets - Serving Dallas Fort Worth (DFW) in Texas." />
+<meta name="twitter:title" content="Contact Us | Awera Surprises - Event Planning, Balloon Decorations, and Luxury Money Bouquets - Serving Dallas Fort Worth (DFW) in Texas." />
 <meta name="twitter:site" content="@awerasurprises" />
 <meta name="twitter:creator" content="@<meta name="twitter:site" content="@awerasurprises" />
 <meta name="twitter:card" content="summary_large_image" />
@@ -36,7 +36,7 @@
 <meta name="twitter:image" content="https://www.awerasurprises.com/assets/img/Awera Surprises Logo.png" />
 
 <!-- Open Graph Meta Tags for Facebook and LinkedIn -->
-<meta property="og:title" content="Home | Awera Surprises - Event Planning, Balloon Decorations, and Luxury Money Bouquets - Serving Dallas Fort Worth (DFW) in Texas." />
+<meta property="og:title" content="Contact Us | Awera Surprises - Event Planning, Balloon Decorations, and Luxury Money Bouquets - Serving Dallas Fort Worth (DFW) in Texas." />
 <meta property="og:site_name" content="Awera Surprises" />
 <meta property="og:type" content="website" />
 <meta property="og:url" content="https://www.awerasurprises.com/" />
