--- a/about.html
+++ b/about.html
@@ -52,10 +52,10 @@
     "name": "Awera Surprises",
     "address": {
       "@type": "PostalAddress",
-      "streetAddress": "5833 Fairglen Ave, Fossil Creek",
-      "addressLocality": "Fort Worth",
+      "streetAddress": "7950 North Glen Drive",
+      "addressLocality": "Irving",
       "addressRegion": "TX",
-      "postalCode": "76137",
+      "postalCode": "75063",
       "addressCountry": "US"
     },
     "telephone": "254-339-3137",
