--- a/portfolio.html
+++ b/portfolio.html
@@ -288,7 +288,7 @@
 
           <div class="col-xl-4 col-md-6" data-aos="fade-up" data-aos-delay="300">
             <div class="card">
-              <img src="assets/img/BalloonBlueColumn2.png" alt="" class="img-fluid">
+              <img src="assets/img/BlueandWhiteColumn2.png" alt="" class="img-fluid">
               <div class="card-body">
                 <h3><a href="contact.html" class="stretched-link"></a></h3>
                 <div class="card-content d-flex flex-column justify-content-center text-center">
@@ -354,7 +354,7 @@
 
           <div class="col-xl-4 col-md-6" data-aos="fade-up" data-aos-delay="900">
             <div class="card">
-              <img src="assets/img/FunkyColumn.png" alt="" class="img-fluid">
+              <img src="assets/img/FunkyColumn2.png" alt="" class="img-fluid">
               <div class="card-body">
                 <h3><a href="contact.html" class="stretched-link"></a></h3>
                 <div class="card-content d-flex flex-column justify-content-center text-center">
