--- a/services.html
+++ b/services.html
@@ -588,7 +588,7 @@
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="1100">
             <div class="service-item position-relative">
               <!-- <div class="icon"> --> <div class="card">
-               <img src="assets/img/BlueandWhiteColumn.png" alt="" class="img-fluid">
+               <img src="assets/img/BlueandWhiteColumn2.png" alt="" class="img-fluid">
                 </i> 
               </div>
                 <h3>Premium Balloon Column with unique pop out - 2 balloon colors</h3>
@@ -653,7 +653,7 @@
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="1300">
             <div class="service-item position-relative">
               <!-- <div class="icon"> --> <div class="card">
-               <img src="assets/img/FunkyColumn.png" alt="" class="img-fluid">
+               <img src="assets/img/FunkyColumn2.png" alt="" class="img-fluid">
                 </i> 
               </div>
                 <h3>Funky Balloon Column with unique pop out - 2 balloon colors</h3>
