--- a/services.html
+++ b/services.html
@@ -369,7 +369,7 @@
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="400">
             <div class="service-item position-relative">
               <!-- <div class="icon"> --> <div class="card">
-               <img src="assets/img/Copy of 2 version - Blue and Gold .png" alt="" class="img-fluid">
+               <img src="assets/img/Copy of 2 version - Blue and Gold2.png" alt="" class="img-fluid">
                 </i> 
               </div>
                 <h3>Balloon Arch and Balloon Shimmer Wall - with 2 balloon colors</h3>
