--- a/services.html
+++ b/services.html
@@ -941,7 +941,7 @@
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="2200">
             <div class="service-item position-relative">
               <!-- <div class="icon"> --> <div class="card">
-               <img src="assets/img/GoldGarland.png" alt="" class="img-fluid">
+               <img src="assets/img/GoldGarland2.png" alt="" class="img-fluid">
                 </i> 
               </div>
                 <h3>Grab and Go Garland 6ft: 2 colors balloons (Must come and collect)</h3>
