--- a/services.html
+++ b/services.html
@@ -969,7 +969,7 @@
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="2300">
             <div class="service-item position-relative">
               <!-- <div class="icon"> --> <div class="card">
-               <img src="assets/img/Helium.png" alt="" class="img-fluid">
+               <img src="assets/img/Helium2.png" alt="" class="img-fluid">
                 </i> 
               </div>
                 <h3>Large Helium Number Balloon with customized wording</h3>
