--- a/contact.html
+++ b/contact.html
@@ -301,7 +301,7 @@
 
           <div class="col-xl-4 col-md-6" data-aos="fade-up" data-aos-delay="100">
             <div class="card">
-              <img src="assets/img/GoldBalloon3.png" alt="" class="img-fluid">
+              <img src="assets/img/BalloonArchandShimmerWall2.png" alt="" class="img-fluid">
             </div>
           </div><!-- End Property Item -->
 
