--- a/contact.html
+++ b/contact.html
@@ -257,7 +257,7 @@
         <p>Wow your guests or surprise someone with beautiful balloons or luxury bouquets. Let us turn your ideas into unforgettable moments with our <b>professional event planning, eye-catching balloon decorations, and stunning luxury money bouquets.</b></p>
         <p>We’re excited to help you create unforgettable memories that elevate both your events and your gifting experience.</p>
         <p>Ready to make it happen? Click on our order form: <a href="https://forms.gle/Tg9XntWrwfMNTN136" width="1000" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">here.</a>
-        <<p>TO HIDE DELETE  -- Ready to make it happen? Click on our order form: <a href="https://forms.office.com/r/2e6B1suZZU" width="1000" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">here.</a>
+        <p>TO HIDE DELETE  -- Ready to make it happen? Click on our order form: <a href="https://forms.office.com/r/2e6B1suZZU" width="1000" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">here.</a>
       </div> 
         <br>
 
